--- a/TensorFlow_2_0_Computer_Vision_Object_Detection_Part_2_[Video].ipynb
+++ b/TensorFlow_2_0_Computer_Vision_Object_Detection_Part_2_[Video].ipynb
@@ -153,7 +153,7 @@
         "id": "0aDDdrlXLMLt"
       },
       "source": [
-        "# Enable GPU dynamic memory allocation\n",
+        "# Enable GPUs\n",
         "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
         "for gpu in gpus:\n",
         "    tf.config.experimental.set_memory_growth(gpu, True)"
